Python3_shame_list
  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_pixelsplitFullLUT2.py", line 13
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_pixelsplitFull.py", line 13
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_ocl_lut_pixelsplit2.py", line 13
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_csr_padded_csr.py", line 12
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_ocl_lut.py", line 29
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_csr_fullsplit.py", line 12
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

  File "/usr/lib/python3/dist-packages/pyFAI/test/profile_lut_pixelsplitFull.py", line 13
    print "#"*50
            ^
SyntaxError: Missing parentheses in call to 'print'

